# golfapi

./: .example.env  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_05_20_2322-51e1e5cf720f_create_table_users.py  2024_05_20_2327-d91550c3116f_create_table_admins.py  2024_05_21_0109-687da7e35f04_create_table_flights.py  2024_05_21_0117-2af2a52c6ec9_create_table_tournaments_and_tournament_.py  2024_05_21_0128-cfcc23aec6eb_create_table_hole.py  2024_05_21_0133-ef97716c7956_create_table_tournament_hole_association.py  2024_05_21_0138-d21fd79accff_update_table_users_add_column_status.py  2024_05_21_0946-9b3273dc7c01_create_table_user_tournament_association.py  2024_05_21_0952-5a529c897fdb_add_image_src_in_user_model.py  2024_05_21_1135-2d58e1b571b6_rework_ondelete_and_nullable.py  2024_05_21_1414-e77760fd05b7_add_field_hcp_in_table_tournament.py  2024_05_21_1652-85707ff9c0b6_create_table_scores_and_totalscores.py  2024_05_21_1957-05fe8f8806c7_add_type_field_in_tournament_table.py  2024_05_23_0327-3670cc1e4ef2_add_phone_field_in_user_model.py  2024_05_24_1236-54ab240491bf_add_name_in_flight_model.py  2024_05_24_1647-0e1a3e61dcf9_add_status_in_tournament_model.py  2024_05_25_0316-d654637e734f_delete_tournament_hole_association.py  2024_05_25_0354-d4077c983701_optional_id_course_for_tournament.py  2024_05_31_2239-5e0fa3c68448_changed_set_null_to_cascade_in_holes_.py  2024_05_31_2246-337193f1b8eb_roolback.py
api_v1/: __init__.py  middlwares.py
auth/: __init__.py  middlwares.py
core/: __init__.py  config.py
database/: __init__.py  helper_for_db.py
(+52 files in other folders)
