[tool.poetry]
name = "fastapi-example"
version = "0.1.0"
description = ""
authors = ["Sumin Ivan <sumin.ivan01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.1"
pydantic = {extras = ["email"], version = "2.*"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
pydantic-settings = "^2.2.1"
aiosqlite = "^0.20.0"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
bcrypt = "^4.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
